@startuml
class logic.GameSystem {
- ArrayList<BaseUnit> allWhitePieces
- ArrayList<BaseUnit> allRedPieces
- boolean gameEnd
- {static} GameSystem instance
+ {static} GameSystem getInstance()
+ boolean isGameEnd()
+ void setGameEnd(boolean)
+ ArrayList<BaseUnit> getAllWhitePieces()
+ ArrayList<BaseUnit> getAllRedPieces()
+ void printBoardStatus(ArrayList<BaseUnit>)
+ BaseUnit promote(BaseUnit,int)
+ void removeDeadPieces(ArrayList<BaseUnit>)
}


class logic.unit.MeleeUnit {
}
class logic.unit.RangeUnit {
+ void attack(ArrayList<BaseUnit>)
}

class logic.unit.BaseUnit {
- int row
- int column
- boolean isWhite
- String name
# int hp
# int power
# boolean isFlying
+ boolean move(int)
+ int getRow()
+ void setRow(int)
+ void attack(ArrayList<BaseUnit>)
+ int getColumn()
+ void setColumn(int)
+ boolean isWhite()
+ void setWhite(boolean)
+ String getName()
+ void setName(String)
+ int getHp()
+ void setHp(int)
+ int getPower()
+ boolean isFlying()
}


class application.Main {
- {static} boolean whiteTurn
- {static} Scanner sc
+ {static} void main(String[])
- {static} void turnFlow(ArrayList<BaseUnit>)
}


class logic.unit.FlyingUnit {
+ boolean move(int)
}



logic.unit.BaseUnit <|-- logic.unit.MeleeUnit
logic.unit.BaseUnit <|-- logic.unit.RangeUnit
logic.unit.BaseUnit <|-- logic.unit.FlyingUnit
@enduml